fix text alignment on mobile

--- a/server/app/assets/stylesheets/northstar/_uswds-theme-custom-styles.scss
+++ b/server/app/assets/stylesheets/northstar/_uswds-theme-custom-styles.scss
@@ -587,4 +587,8 @@ main {
     text-align: left;
     padding-left: 0;
   }
+
+  .summary-answer {
+    text-align: left;
+  }
 }
